--- a/index.html
+++ b/index.html
@@ -5,75 +5,98 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerard Louis | Software Engineer | dmglouis@gmail.com</title>
+    <link rel="stylesheet" href="stylesheets/normalize.css">
+    <link rel="stylesheet" href="stylesheets/fonts.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="stylesheets/main.css">
 </head>
 <body>
     <header>
         <h1>Gerard Louis</h1>
         <h2>Software Engineer</h2>
     </header>
-    <aside>
-        <section>
-            <h2>Contact</h2>
-            <address>
+    <div class="wrapper">
+        <aside>
+            <section>
+                <h2>Contact</h2>
+                <address>
+                    <ul>
+                        <li>
+                            <a href="mailto:dmglouis@gmail.com" class="no-style">dmglouis@gmail.com</a>
+                            <span class="material-icons">email</span>
+                        </li>
+                        <li>
+                            <a href="tel:+14402520706" class="no-style">(440) 252-0706</a>
+                            <span class="material-icons">phone_enabled</span>
+                        </li>
+                        <li>
+                            Cleveland, OH
+                            <span class="material-icons">location_on</span>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/gerardmlouis/">LinkedIn</a>
+                            <span class="material-icons"><img src="linked-in-logo.png" width="18" height="18"></span>
+                        </li>
+                    </ul>
+                </address>
+            </section>
+            <section>
+                <h2>Education</h2>
                 <ul>
-                    <li><a href="mailto:dmglouis@gmail.com">dmglouis@gmail.com</a></li>
-                    <li><a href="tel:+14402520706">(440) 252-0706</a></li>
-                    <li>Cleveland, OH</li>
-                    <li><a href="https://www.linkedin.com/in/gerardmlouis/">LinkedIn</a></li>
+                    <li>B.S.</li>
+                    <li>Computer Science</li>
+                    <li>The Ohio State University</li>
+                    <li>Sep 2008 - May 2014</li>
+                    <li>Columbus, OH</li>
                 </ul>
-            </address>
-        </section>
-        <section>
-            <h2>Education</h2>
-            <ul>
-                <li>B.S.</li>
-                <li>Computer Information Science</li>
-                <li>The Ohio State University</li>
-                <li>September 2008 - May 2014</li>
-                <li>Columbus, OH</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Skills</h2>
-            <ul>
-                <li>SQL (MSSQL, MySQL, PostgreSQL)</li>
-                <li>Javascript (NodeJS, AngularJS, jQuery)</li>
-                <li>HTML5/CSS</li>
-                <li>Java, C#, C++</li>
-                <li>Linux, MacOS, Git</li>
-            </ul>
-        </section>
-    </aside>
-    <main>
-        <h2>Work Experience</h2>
-        <h3>Dematic Corp</h3>
-        <section>
-            <h4>Software Engineer III</h4>
-            <h5>January 2019 - current</h5>
-            <ul>
-                <li>Used my HTML5/CSS skills to revamp multiple customer-facing screens</li>
-                <li>Automated rollouts of changes to multi-site customers using RoboMojo (UI for robocopy), still in place today</li>
-                <li>Various trips to customer sites gave me valuable real-world knowledge of the logistics industry</li>
-            </ul>
-        </section>
-        <section>
-            <h4>Software Engineer II</h4>
-            <h5>January 2016 - January 2019</h5>
-            <ul>
-                <li>Used my HTML5/CSS skills to revamp multiple customer-facing screens</li>
-                <li>Automated rollouts of changes to multi-site customers using RoboMojo (UI for robocopy), still in place today</li>
-                <li>Various trips to customer sites gave me valuable real-world knowledge of the logistics industry</li>
-            </ul>
-        </section>
-        <section>
-            <h4>Software Engineer I</h4>
-            <h5>May 2014 - January 2016</h5>
-            <ul>
-                <li>Used my HTML5/CSS skills to revamp multiple customer-facing screens</li>
-                <li>Automated rollouts of changes to multi-site customers using RoboMojo (UI for robocopy), still in place today</li>
-                <li>Various trips to customer sites gave me valuable real-world knowledge of the logistics industry</li>
-            </ul>
-        </section>
-    </main>
+            </section>
+            <section>
+                <h2>Skills</h2>
+                <ul>
+                    <li>SQL (MSSQL, MySQL, PostgreSQL)</li>
+                    <li>Javascript (NodeJS, AngularJS, jQuery)</li>
+                    <li>HTML5/CSS</li>
+                    <li>Java, C#, C++</li>
+                    <li>Linux, MacOS, Git, SVN</li>
+                </ul>
+            </section>
+        </aside>
+        <main>
+            <h2>Objective</h2>
+            <section>
+                <p>Experienced software engineer with over 7 years of industry experience looking for a new challenge. A wide breadth of technology stack experiences, a keen attention to detail, and a yearning to keep learning makes me a valuable asset.</p>
+            </section>
+            <h2>Work Experience</h2>
+            <h3>Dematic Corp</h3>
+            <section>
+                <h4>Software Engineer III</h4>
+                <h5>January 2019 - current</h5>
+                <ul>
+                    <li>Participated in my first scrum team experience, as part of a new initiative in our group to take ownership of our software product. The project consisted of updating our screens from JSPs served by Apache Tomcat to an API module (NestJS) and a UI module (AngularJS).</li>
+                    <li>Presented training sessions for new hires on topics ranging from base modules to customized versions for specific customers. As part of these training sessions, all information was documented so that institutional knowledge could be turned into standardized procedures and protocols.</li>
+                </ul>
+            </section>
+            <section>
+                <h4>Software Engineer II</h4>
+                <h5>January 2016 - January 2019</h5>
+                <ul>
+                    <li>Increased skill level in SQL, one of the main technologies utilized by our product. Used this knowledge to optimize multiple slow-running queries and stored procedures.</li>
+                    <li>Led my first project as technical lead, in charge of everything from design, implementation, to delegation of tasks for project completion</li>
+                    <li>Gained proficiency in Java while extending capabilities and fixing bugs for a module that was deployed at a beta site</li>
+                    <li>Through my first mentorship, I gained valuable insight into the process of onboarding a new engineer and was able to develop more detailed documentation and procedures for future hires.</li>
+                </ul>
+            </section>
+            <section>
+                <h4>Software Engineer I</h4>
+                <h5>May 2014 - January 2016</h5>
+                <ul>
+                    <li>Used my HTML5/CSS skills to revamp multiple customer-facing screens</li>
+                    <li>Automated rollouts of changes to multi-site customers using RoboMojo (UI for robocopy), still in place today</li>
+                    <li>Various trips to customer sites gave me valuable real-world knowledge of the logistics industry</li>
+                </ul>
+            </section>
+            <br>
+        </main>
+    </div>
 </body>
 </html>
