--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="stylesheets/normalize.css">
     <link rel="stylesheet" href="stylesheets/fonts.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="stylesheets/main.css">
 </head>
 <body>
@@ -35,7 +38,7 @@
                         </li>
                         <li>
                             <a href="https://www.linkedin.com/in/gerardmlouis/">LinkedIn</a>
-                            <span class="material-icons"><img src="linked-in-logo.png" width="18" height="18"></span>
+                            <span class="material-icons"><img src="images/linked-in-logo.png" width="18" height="18"></span>
                         </li>
                     </ul>
                 </address>
@@ -64,9 +67,9 @@
         <main>
             <h2>Objective</h2>
             <section>
-                <p>Experienced software engineer with over 7 years of industry experience looking for a new challenge. A wide breadth of technology stack experiences, a keen attention to detail, and a yearning to keep learning makes me a valuable asset.</p>
+                <p>Innovative software engineer with 7+ years of industry experience developing code and leading projects and teams in a remote environment. Lifelong learner with full-stack experience, a keen attention to detail, and a collaborative mindset.</p>
             </section>
-            <h2>Work Experience</h2>
+            <h2>Experience</h2>
             <h3>Dematic Corp</h3>
             <section>
                 <h4>Software Engineer III</h4>
@@ -74,6 +77,7 @@
                 <ul>
                     <li>Participated in my first scrum team experience, as part of a new initiative in our group to take ownership of our software product. The project consisted of updating our screens from JSPs served by Apache Tomcat to an API module (NestJS) and a UI module (AngularJS).</li>
                     <li>Presented training sessions for new hires on topics ranging from base modules to customized versions for specific customers. As part of these training sessions, all information was documented so that institutional knowledge could be turned into standardized procedures and protocols.</li>
+                    <li>Participated in a company-wide hackathon and had our group's idea chosen as one of the finalists to extend and integrate into our product.</li>
                 </ul>
             </section>
             <section>
